--- a/StytchConsole/StytchConsole.csproj
+++ b/StytchConsole/StytchConsole.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Stytch\Stytch.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
