--- a/StytchAuth/StytchAuth.csproj
+++ b/StytchAuth/StytchAuth.csproj
@@ -5,13 +5,25 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>StytchAuth</PackageId>
-    <Version>0.0.1-a.1</Version>
+    <Version>0.0.1-a.2</Version>
     <Authors>Ahmet Karatas</Authors>
+    <Description>Provides the Stytch API in .NET 7. Built authentication easily in your application</Description>
+    <Copyright>Copyright (c) Ahmet Karatas 2023.</Copyright>
+    <PackageProjectUrl>https://github.com/ahmetkaratass/stytch-net</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/ahmetkaratass/stytch-net</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Stytch, Authentication, API, SDK</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="../README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
